package filtros;

import domain.Hecho;

import java.util.List;

public interface FiltroHechos {

    public boolean filtrar(Hecho hecho);

}
