package fuentes;

import domain.Hecho;
import java.util.List;

public interface FuenteDatos {
  List<Hecho> obtenerHechos();
}
