package fuentes;

public class FuenteDinamica extends Fuente {
}
