package helpers;

public enum Origen {
    CARGA_MANUAL, DATASET, CONTRIBUYENTE
}
