package usuarios;

public class DatosUsuario {
    //TODO
}
